--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # Ignore bundler config.
 /.bundle
 /public/assets
-
+/public/uploads
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
